@@ -1,3 +1,8 @@
+2009-08-01  Allan McRae <allan@archlinux.org>
+	* sudo-1.7.2p1-1
+	* upstrea update
+	* use 'force' due to upstream versioning
+
 2009-07-12  Allan McRae <allan@archlinux.org>
 	* sudo-1.7.2-1
 	* upstream update
